k8s/ws-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ws-api-service
spec:
  selector:
    app: ws-api
  ports:
  - port: 8080
    targetPort: 8080
